--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ nav ul {
 
 nav ul li {
     margin: 0 20px;
+    position: relative;
 }
 
 nav ul li a {
@@ -48,6 +49,58 @@ nav ul li a:hover {
 .logo a {
     color: #fff;
     text-decoration: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    background-color: #0056b3;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.ad-banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+}
+
+.ad-banner img {
+    max-width: 100%;
+    height: auto;
+    width: 728px;
+    height: 90px;
 }
 
 .main-content {
